Fix card gap in search view for large screens

--- a/web/src/layout/common/PackageCard.module.css
+++ b/web/src/layout/common/PackageCard.module.css
@@ -38,3 +38,9 @@
     text-decoration: underline;
   }
 }
+
+@media only screen and (min-width: 1920px) {
+  .cardWrapper {
+    padding: 0 1rem;
+  }
+}
